--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
    
 }
 .status{
-    margin: 0 20px;
+    margin: 10px 20px;
     text-align: center;
     padding:10px 0;
     border-radius: 10px;
